--- a/Locar/WebContent/css/global.css
+++ b/Locar/WebContent/css/global.css
@@ -1,14 +1,21 @@
 @import "https://use.fontawesome.com/releases/v5.5.0/css/all.css";
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 :root {
   --whiteoff: #DFDBD9;
   --black: #212121;
   --grey: #323232;
 
-  --green: #065446;
+  --green: #2E8B57;
   --lightgreen: #4caf50;
+  --darkgreen: #0d381b;
 
   --error: #ff0033;
+
+  --confirm: #42f572;
+  --cancel: #f54242;
+
+  --fredoka_one: 'Fredoka One', cursive;;
 }
 
 ::-webkit-calendar-picker-indicator {
@@ -24,4 +31,70 @@
 
 body {
   background: var(--black);
+}
+
+.logo {
+  display: grid;
+  text-align: center;
+
+  height: 200px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 5px 23em;
+  grid-gap: 0px;
+
+  box-shadow: 0px 5px 5px var(--lightgreen);
+
+  background: var(--grey);
+  overflow: hidden;
+}
+
+.logo i {
+  font-size: 100px;
+  margin-top: 5px;
+  opacity: 0;
+  grid-area: 1;
+
+  color: var(--lightgreen);
+  text-shadow: 1px 1px 10px var(--lightgreen);
+  animation: zoomIn 2s cubic-bezier(0.785, 0.135, 0.150, 0.860) both;
+  animation-delay: 1s;
+}
+
+.logo h2 {
+  font-family: var(--fredoka_one);
+  text-transform: uppercase;
+
+  grid-area: 2;
+  font-size: 60px;
+
+
+  color: var(--whiteoff);
+  animation: slideBottom 1s cubic-bezier(0.785, 0.135, 0.150, 0.860) both;
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(1,1);
+  }
+  50% {
+    transform: scale(1.2,1.2);
+  }
+  100% {
+    transform: scale(1,1);
+    opacity: 1;
+  }
+}
+
+@keyframes slideBottom {
+  0% {
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    opacity: 0%;
+    font-size: 5px;
+  }
+  100% {
+    -webkit-transform: translateY(27%);
+    transform: translateY(27%);
+    opacity: 100%;
+  }
 }
